--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,10 @@
   margin: 0;
 }
 
+body {
+  scroll-behavior: smooth;
+}
+
 @media screen and (max-width: 390px) {
   .main-program .programs .program {
     display: flex;
@@ -95,7 +99,7 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
     transition: ease-in-out 2s;
   }
 
@@ -309,9 +313,13 @@
     display: none !important;
   }
 
-  .more-btn button {
+  .more-btn {
+    display: flex;
     font-family: "Lato", sans-serif;
     font-weight: 400;
+    justify-content: center;
+    position: relative;
+    top: 50px;
     width: 98%;
     height: 90px;
     border-style: none;
@@ -670,7 +678,7 @@
 
   nav .menu-items .menu-item {
     font-family: "Lato", sans-serif;
-    font-size: 28px;
+    font-size: 20px;
     padding: 10px;
   }
 
@@ -852,7 +860,7 @@
     margin-right: 10px;
   }
 
-  .more-btn button {
+  .more-btn {
     display: none;
   }
 
@@ -873,6 +881,14 @@
     width: 100%;
     flex-direction: column;
     height: auto;
+  }
+
+  .speaker-hider {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
   }
 
   .speakers-sec .speaker-title h2 {
@@ -903,7 +919,7 @@
   .speakers-sec .speakers .speaker {
     display: flex;
     width: 50%;
-    flex-basis: 700px;
+    flex-basis: 600px;
     height: auto;
     margin: 10px;
     justify-content: space-between;
