--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -687,10 +687,14 @@ body {
   }
 
   /* Header Section */
+  .header {
+    width: 100%;
+  }
+
   .hero-section {
     background: url(../images/main_big.png);
     background-repeat: no-repeat;
-    margin-top: 2px;
+    width: 100%;
     height: 700px;
   }
 
@@ -819,7 +823,7 @@ body {
   .main-program .programs {
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 5px;
     margin-top: 30px;
   }
 
@@ -830,10 +834,15 @@ body {
     align-items: center;
     width: 200px;
     max-height: 500px;
-    gap: 20px;
-    padding: 10px;
+    gap: 5px;
+    padding: 5px;
     background: #6a6b6d;
     opacity: 0.8;
+  }
+
+  .main-program .programs .program:hover {
+    border: 3px solid #d3d3d3;
+    transition: ease-in-out 1s;
   }
 
   .main-program .program .program-icon {
@@ -929,8 +938,8 @@ body {
 
   .speakers-sec .speaker .img-profile {
     width: 100%;
-    max-width: 300px;
-    height: 250px;
+    max-width: 200px;
+    height: 200px;
   }
 
   .speakers-sec .speakers .speaker-info {
